// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar Calendar should support locale 1`] = `
<div
  class="ant-picker-calendar ant-picker-calendar-full"
>
  <div
    class="ant-picker-calendar-header"
  >
    <div
      class="ant-select ant-picker-calendar-year-select ant-select-single ant-select-show-arrow"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title="2018年"
        >
          2018年
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select: none;"
        unselectable="on"
      >
        <span
          class="anticon no-pointer-events .icons-form-dropdown ant-select-suffix"
          role="img"
        >
          <img
            alt=""
            src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSJub25lIiBoZWlnaHQ9IjEyIiB2aWV3Qm94PSIwIDAgMTIgMTIiIHdpZHRoPSIxMiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Im0uNTc1Njg0IDQuNDI0MjEuODQ4NTI2LS44NDg1MyA0LjU3NTc0IDQuNTc1NzQgNC41NzU3NS00LjU3NTc0Ljg0ODUuODQ4NTMtNS40MjQyNSA1LjQyNDI3eiIgZmlsbD0iIzhkOTM5YyIgZmlsbC1ydWxlPSJldmVub2RkIi8+PC9zdmc+"
          />
        </span>
      </span>
    </div>
    <div
      class="ant-select ant-picker-calendar-month-select ant-select-single ant-select-show-arrow"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title="10月"
        >
          10月
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select: none;"
        unselectable="on"
      >
        <span
          class="anticon no-pointer-events .icons-form-dropdown ant-select-suffix"
          role="img"
        >
          <img
            alt=""
            src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSJub25lIiBoZWlnaHQ9IjEyIiB2aWV3Qm94PSIwIDAgMTIgMTIiIHdpZHRoPSIxMiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Im0uNTc1Njg0IDQuNDI0MjEuODQ4NTI2LS44NDg1MyA0LjU3NTc0IDQuNTc1NzQgNC41NzU3NS00LjU3NTc0Ljg0ODUuODQ4NTMtNS40MjQyNSA1LjQyNDI3eiIgZmlsbD0iIzhkOTM5YyIgZmlsbC1ydWxlPSJldmVub2RkIi8+PC9zdmc+"
          />
        </span>
      </span>
    </div>
    <div
      class="ant-radio-group ant-radio-group-outline ant-picker-calendar-mode-switch"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
            value="month"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          月
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="year"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          年
        </span>
      </label>
    </div>
  </div>
  <div
    class="ant-picker-panel"
    tabindex="0"
  >
    <div
      class="ant-picker-date-panel"
    >
      <div
        class="ant-picker-body"
      >
        <table
          class="ant-picker-content"
        >
          <thead>
            <tr>
              <th>
                一
              </th>
              <th>
                二
              </th>
              <th>
                三
              </th>
              <th>
                四
              </th>
              <th>
                五
              </th>
              <th>
                六
              </th>
              <th>
                日
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-01"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    01
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-02"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    02
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-03"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    03
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-04"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    04
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-05"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    05
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-06"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    06
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-07"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    07
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-08"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    08
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-09"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    09
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-10"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    10
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-11"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    11
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-12"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    12
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-13"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    13
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-14"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    14
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-15"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    15
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-16"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    16
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-17"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    17
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-18"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    18
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view ant-picker-cell-today ant-picker-cell-selected"
                title="2018-10-19"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date ant-picker-calendar-date-today"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    19
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-20"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    20
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-21"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    21
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-22"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    22
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-23"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    23
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-24"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    24
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-25"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    25
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-26"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    26
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-27"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    27
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-28"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    28
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-29"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    29
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-30"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    30
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2018-10-31"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    31
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-01"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    01
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-02"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    02
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-03"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    03
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-04"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    04
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="ant-picker-cell"
                title="2018-11-05"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    05
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-06"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    06
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-07"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    07
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-08"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    08
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-09"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    09
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-10"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    10
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2018-11-11"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    11
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calendar rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-picker-calendar ant-picker-calendar-full ant-picker-calendar-rtl"
>
  <div
    class="ant-picker-calendar-header"
  >
    <div
      class="ant-select ant-picker-calendar-year-select ant-select-rtl ant-select-single ant-select-show-arrow"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title="2000"
        >
          2000
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          class="anticon no-pointer-events .icons-form-dropdown ant-select-suffix"
          role="img"
        >
          <img
            alt=""
            src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSJub25lIiBoZWlnaHQ9IjEyIiB2aWV3Qm94PSIwIDAgMTIgMTIiIHdpZHRoPSIxMiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Im0uNTc1Njg0IDQuNDI0MjEuODQ4NTI2LS44NDg1MyA0LjU3NTc0IDQuNTc1NzQgNC41NzU3NS00LjU3NTc0Ljg0ODUuODQ4NTMtNS40MjQyNSA1LjQyNDI3eiIgZmlsbD0iIzhkOTM5YyIgZmlsbC1ydWxlPSJldmVub2RkIi8+PC9zdmc+"
          />
        </span>
      </span>
    </div>
    <div
      class="ant-select ant-picker-calendar-month-select ant-select-rtl ant-select-single ant-select-show-arrow"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title="Sep"
        >
          Sep
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          class="anticon no-pointer-events .icons-form-dropdown ant-select-suffix"
          role="img"
        >
          <img
            alt=""
            src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSJub25lIiBoZWlnaHQ9IjEyIiB2aWV3Qm94PSIwIDAgMTIgMTIiIHdpZHRoPSIxMiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Im0uNTc1Njg0IDQuNDI0MjEuODQ4NTI2LS44NDg1MyA0LjU3NTc0IDQuNTc1NzQgNC41NzU3NS00LjU3NTc0Ljg0ODUuODQ4NTMtNS40MjQyNSA1LjQyNDI3eiIgZmlsbD0iIzhkOTM5YyIgZmlsbC1ydWxlPSJldmVub2RkIi8+PC9zdmc+"
          />
        </span>
      </span>
    </div>
    <div
      class="ant-radio-group ant-radio-group-outline ant-radio-group-rtl ant-picker-calendar-mode-switch"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-rtl"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
            value="month"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Month
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-rtl"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="year"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Year
        </span>
      </label>
    </div>
  </div>
  <div
    class="ant-picker-panel"
    tabindex="0"
  >
    <div
      class="ant-picker-date-panel"
    >
      <div
        class="ant-picker-body"
      >
        <table
          class="ant-picker-content"
        >
          <thead>
            <tr>
              <th>
                Su
              </th>
              <th>
                Mo
              </th>
              <th>
                Tu
              </th>
              <th>
                We
              </th>
              <th>
                Th
              </th>
              <th>
                Fr
              </th>
              <th>
                Sa
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="ant-picker-cell"
                title="2000-08-27"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    27
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2000-08-28"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    28
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2000-08-29"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    29
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2000-08-30"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    30
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2000-08-31"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    31
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-01"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    01
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-02"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    02
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-03"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    03
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-04"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    04
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-05"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    05
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-06"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    06
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-07"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    07
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-08"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    08
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-09"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    09
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-10"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    10
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-11"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    11
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-12"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    12
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-13"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    13
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-14"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    14
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-15"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    15
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-16"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    16
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-17"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    17
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-18"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    18
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-19"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    19
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-20"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    20
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-21"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    21
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-22"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    22
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-23"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    23
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-24"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    24
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-25"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    25
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-26"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    26
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-27"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    27
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view ant-picker-cell-today ant-picker-cell-selected"
                title="2000-09-28"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date ant-picker-calendar-date-today"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    28
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-29"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    29
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell ant-picker-cell-in-view"
                title="2000-09-30"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    30
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="ant-picker-cell"
                title="2000-10-01"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    01
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2000-10-02"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    02
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2000-10-03"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    03
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2000-10-04"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    04
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2000-10-05"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    05
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2000-10-06"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    06
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
              <td
                class="ant-picker-cell"
                title="2000-10-07"
              >
                <div
                  class="ant-picker-cell-inner ant-picker-calendar-date"
                >
                  <div
                    class="ant-picker-calendar-date-value"
                  >
                    07
                  </div>
                  <div
                    class="ant-picker-calendar-date-content"
                  />
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
